--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-5.0.8-bin.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/substance.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/trident.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/selenium-server-standalone-2.43.0.jar"/>
+	<classpathentry kind="lib" path="lib/selenium-server-standalone-2.48.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
